--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
 asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 Django==5.1.7
+django-stubs==5.1.3
+django-stubs-ext==5.1.3
+idna==3.10
 mypy==1.15.0
 mypy-extensions==1.0.0
+psycopg2==2.9.10
+python-dotenv==1.0.1
+pytz==2025.1
+requests==2.32.3
 sqlparse==0.5.3
+types-PyYAML==6.0.12.20241230
+types-requests==2.32.0.20250306
 typing_extensions==4.12.2
+urllib3==2.3.0
