add test for CurrencyRateService

--- a/mypy.ini
+++ b/mypy.ini
@@ -11,3 +11,6 @@ django_settings_module = "config.settings"
 [mypy-tests.*]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
+ignore_missing_imports = True
+allow_untyped_decorators = True
+check_untyped_defs = True
