--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,7 @@ python_version = 3.12
 strict = True
 cache_dir = .mypy_cache
 plugins = mypy_django_plugin.main
+ignore_missing_imports = True
 
 [mypy.plugins.django-stubs]
 django_settings_module = "config.settings"
