added pie chart with data from db

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ media
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/dataSources.xml
+.idea/sqldialects.xml
 
 # AWS User-specific
 .idea/**/aws.xml
