--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ prompt_toolkit==3.0.50
 propcache==0.3.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+pyTelegramBotAPI==4.26.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
