--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.8.1
 attrs==25.3.0
+beautifulsoup4==4.13.4
 billiard==4.2.1
 boto3==1.24.27
 botocore==1.27.75
@@ -48,9 +49,11 @@ requests==2.32.3
 s3transfer==0.6.2
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.6
 sqlparse==0.5.3
 tqdm==4.67.1
 types-PyYAML==6.0.12.20241230
+types-requests==2.32.0.20250306
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==1.26.20
