--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ click-repl==0.3.0
 distro==1.9.0
 Django==5.2
 django-ninja==1.4.0
+django-parler==2.3
 django-storages==1.14.5
 django-stubs==5.1.3
 django-stubs-ext==5.1.3
