--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,12 @@
 [mypy]
 python_version = 3.12
+plugins = mypy_django_plugin.main
 
 strict = True
-plugins = mypy_django_plugin.main
 ignore_missing_imports = True
+
+follow_imports = silent
+show_error_codes = True
 
 [mypy.plugins.django-stubs]
 django_settings_module = "config.settings"
