--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 distro==1.9.0
 Django==5.2
+django-cors-headers==4.7.0
 django-ninja==1.4.0
 django-parler==2.3
 django-storages==1.14.5
